BEEBEEP (Free Office Messenger) - CHANGELOG - (c) 2010-2021 Marco Mastroddi
For more informations please visit https://www.beebeep.net

BeeBEEP 5.8.5 (in development)
- Added "Enable visual notifications for chat window" option menu Settings - Notifications
- Added "Change emoticon size in chat" option in menu Settings - Chat.
- Fixed a bug in connection to prevent PING before HELLO message.
- Emoticons will no longer be displayed larger than their maximum size.

BeeBEEP 5.8.4
- New feature: almost all the options of file beebeep.ini can be used in file beebeep.rc also
- New feature: added "Use high resolution emoticons" option
- New feature: added ECDH key exchange to encryption protocol
- New feature: added "Auto save interval" for chat messages to prevent data loss
- New feature: added "Favored emoticons" as tab in emoticon list
- New feature: added Voice Message Player interface
- New dark theme added in the interface
- User icons in chat window can be clicked also if the user is offline
- Suspend/sleep mode is now managed also in Linux systems.
- File paths will be recognized and made clickable in chat (it must be a single message).
- Added "KeepModificationDateOnFileTransferred" option in beebeep.ini (it is always enabled in BeeBOX)
- Added "AllowedFileExtensionsInFileTransfer" option in beebeep.rc
- Added "AllowOnlyHostAddressesFromHostsIni" option in file beebeep.rc
- Added "Clear recent emoticons" in menu option of the chat bar
- Added "ConnectionKeyExchangeMethod" option in beebeep.rc
- Added "AddNicknameToDataFolder" option in beebeep.rc
- Fixed known issue: BeeBEEP prevents the CTRL+ALT+B (or CMD+ALT+B on MacOSX) key sequence in other applications from working
- Fixed a bug in options "Disable create message" and "Disable edit groups"
- Fixed a visualization bug if you open an user VCARD near the side of your desktop
- Fixed a bug on Download folder when you copy BeeBEEP from a computer to another one