@@ -5,7 +5,10 @@ BeeBEEP 5.8.5 (in development)
 - Added "Enable visual notifications for chat window" option menu Settings - Notifications
 - Added "Change emoticon size in chat" option in menu Settings - Chat.
 - Fixed a bug in connection to prevent PING before HELLO message.
+- Fixed a bug on using Message History with CTRL+Up / CTRL+Down.
+- Fixed a bug on "Raise chat window on new message".
 - Emoticons will no longer be displayed larger than their maximum size.
+
 
 BeeBEEP 5.8.4
 - New feature: almost all the options of file beebeep.ini can be used in file beebeep.rc also
